/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.dac.proto.support;

import "job.proto";

option java_package = "com.dremio.dac.proto.model.source";
option optimize_for = SPEED;

message ClusterIdentity {
  optional string identity = 1;
  optional int64 serial = 2 [deprecated = true];
  optional int64 created = 3;
  optional ClusterVersion version = 4;
  optional string tag = 5;
}

message ClusterVersion {
  optional int32 major = 1;
  optional int32 minor = 2;
  optional int32 patch = 3;
  optional int32 buildNumber = 4;
  optional string qualifier = 5;
}

message SoftwareVersion {
  optional string version = 1;
}

message Source {
  optional string name = 1;
  optional string type = 2;
}

message Node {
  optional string name = 1;
  optional NodeMemory memory = 2;
  optional int32 cores = 3;
  optional string role = 4;
}

message NodeMemory {
  optional int64 physical_bytes = 1;
  optional int64 heap_bytes = 2;
  optional int64 direct_bytes = 3;
}

message ClusterInfo {
  optional ClusterIdentity identity = 1;
  optional SoftwareVersion version = 2;
  repeated Source source = 3;
  repeated Node node = 4;
  repeated SystemProperty property = 5;
  optional string javaVmVersion = 6;
  optional string jreVersion = 7;
  optional string edition = 8;
}

message SystemProperty {
  optional string name = 1;
  optional string value = 2;
}

message Submission {
  optional string first = 1;
  optional string last = 2;
  optional string email = 3;
  optional int64 date = 4;
  optional string submission_id = 5;
}

message SupportHeader {
  optional ClusterInfo cluster_info = 1;
  optional Submission submission = 2;
  optional JobAttempt job = 3;
  optional string dremio_version = 4;
}
